Follow two changes at the far end in the http3 tests
Two places where nothing about this implementation changed, only the peer:

For JA4's signature_algorithms segment the expected value used to be sorted
ascending (0201,0401,0403,...), while what the site reports now is the order the
ClientHello sends them in (0403,0804,0401,...). JA4 sorts the extensions only,
and this segment was always meant to keep its original order, so the fingerprint
site has corrected its algorithm. The JA4 string and its hash are updated
together for all six profiles.

In ApplicationSettingsTest, www.google.com's answer to a bare GET went from 302
to 200, which is its own redirect policy and has nothing to do with ALPS, while
the assertion had pinned 302 down. It becomes "a 2xx or 3xx answer counts": when
ALPS negotiation fails the server closes the connection and status() throws
instead of returning a number, so "it answered with a number" is what this test
is really after; 4xx and 5xx still do not pass.

The fingerprint cases have to reach quic.tools.scrapfly.io, which this machine
cannot currently connect to (10 s timeout), so this batch of expected values was
not measured.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_016namAzNnUX31XzYkU6oLvA